<?xml version="1.0"?>
<package format="2">
  <name>alica_viewer</name>
  <version>0.0.1</version>
  <description>alica_viewer provides a GUI for viewing alica information</description>
  <maintainer email="gautham.manoharan@rapyuta-robotics.com">Gautham Manoharan</maintainer>

  <license>Commercial</license>

  <author>Gautham Manoharan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>qt_build</depend>
  <depend>libqt4-dev</depend>

  <depend>alica_id</depend>
  <depend>alica_msgs</depend>
  <depend>alica_engine</depend>
</package>
